--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,36 @@
 version: '3.1'
 services:
   stats-server:
+    build: stats/stats-server
+    image: stats-server
+    container_name: stats-server
     ports:
       - "9090:9090"
+    depends_on:
+      - stats-db
+    environment:
+      - TZ=Europe/Moscow
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/explore-with-me_stats
+      - SPRING.DATASOURCE.USERNAME=kitty
+      - SPRING.DATASOURCE.PASSWORD=purrrrrr
+      - DB_HOST=db
+      - DB_PORT=5432
 
   stats-db:
     image: postgres:14-alpine
+    volumes:
+      - /var/lib/shareit/data/
+    container_name: db
+    ports:
+      - "6541:5432"
+    environment:
+      - TZ=Europe/Moscow
+      - POSTGRES_DB=explore-with-me_stats
+      - POSTGRES_USER=kitty
+      - POSTGRES_PASSWORD=purrrrrr
 
   ewm-service:
+    build: main-service
+    container_name: main-service
     ports:
       - "8080:8080"
-
-  ewm-db:
-    image: postgres:14-alpine
