--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,14 +13,14 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/explore-with-me_stats
       - SPRING.DATASOURCE.USERNAME=kitty
       - SPRING.DATASOURCE.PASSWORD=purrrrrr
-      - DB_HOST=db
+      - DB_HOST=stats-db
       - DB_PORT=5432
 
   stats-db:
     image: postgres:14-alpine
     volumes:
       - /var/lib/shareit/data/
-    container_name: db
+    container_name: stats-db
     ports:
       - "6541:5432"
     environment:
@@ -29,8 +29,28 @@ services:
       - POSTGRES_USER=kitty
       - POSTGRES_PASSWORD=purrrrrr
 
-  ewm-service:
+  main-service:
     build: main-service
     container_name: main-service
     ports:
       - "8080:8080"
+    depends_on:
+      - ewm-db
+      - stats-server
+    environment:
+      - STATS-SERVER_URL=http://stats-server:9090
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://main-service-db:5432/explore-with-me_main_bd
+      - POSTGRES_USER=kitty
+      - POSTGRES_PASSWORD=purrrrrr
+      - TZ=Europe/Moscow
+
+  main-service-db:
+    image: postgres:14-alpine
+    container_name: main-service-db
+    ports:
+      - "6541:5432"
+    environment:
+      - POSTGRES_DB=explore-with-me_main_bd
+      - POSTGRES_USER=kitty
+      - POSTGRES_PASSWORD=purrrrrr
+      - TZ=Europe/Moscow
