--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - stats-db
     environment:
       - TZ=Europe/Moscow
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/explore-with-me_stats
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/explore-with-me_stats-db
       - SPRING.DATASOURCE.USERNAME=kitty
       - SPRING.DATASOURCE.PASSWORD=purrrrrr
       - DB_HOST=stats-db
@@ -18,14 +18,12 @@ services:
 
   stats-db:
     image: postgres:14-alpine
-    volumes:
-      - /var/lib/shareit/data/
     container_name: stats-db
     ports:
-      - "6541:5432"
+      - "7575:5432"
     environment:
       - TZ=Europe/Moscow
-      - POSTGRES_DB=explore-with-me_stats
+      - POSTGRES_DB=explore-with-me_stats-db
       - POSTGRES_USER=kitty
       - POSTGRES_PASSWORD=purrrrrr
 
@@ -35,7 +33,7 @@ services:
     ports:
       - "8080:8080"
     depends_on:
-      - ewm-db
+      - main-service-db
       - stats-server
     environment:
       - STATS-SERVER_URL=http://stats-server:9090
