--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -9,6 +9,11 @@ logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/explore-with-me_main_bd
-spring.datasource.username=kitty
-spring.datasource.password=purrrrrr
+
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
+
+#spring.datasource.url=jdbc:postgresql://localhost:5432/explore-with-me_main_bd
+#spring.datasource.username=kitty
+#spring.datasource.password=purrrrrr
