--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,12 @@ services:
       - SPRING.DATASOURCE.PASSWORD=purrrrrr
       - DB_HOST=stats-db
       - DB_PORT=5432
+    restart: on-failure
 
   stats-db:
     image: postgres:14-alpine
+    volumes:
+      - /var/lib/explore-with-me/data/
     container_name: stats-db
     ports:
       - "7575:5432"
@@ -26,6 +29,7 @@ services:
       - POSTGRES_DB=explore-with-me_stats-db
       - POSTGRES_USER=kitty
       - POSTGRES_PASSWORD=purrrrrr
+    restart: on-failure
 
   main-service:
     build: main-service
@@ -41,9 +45,12 @@ services:
       - POSTGRES_USER=kitty
       - POSTGRES_PASSWORD=purrrrrr
       - TZ=Europe/Moscow
+    restart: on-failure
 
   main-service-db:
     image: postgres:14-alpine
+    volumes:
+      - /var/lib/explore-with-me/data/
     container_name: main-service-db
     ports:
       - "6541:5432"
@@ -52,3 +59,4 @@ services:
       - POSTGRES_USER=kitty
       - POSTGRES_PASSWORD=purrrrrr
       - TZ=Europe/Moscow
+    restart: on-failure
